+ Add =bin/org-alert= script -- a cron script that scans TODOs in org files and dispatches system alerts.
+ =feature/workspaces= Add a bookmarks feature, but for wconfs, that can revive file buffers. Also needs an interface.
+ Add README.org's with working babel blocks to modules.
+ Document best practices for customizing DOOM emacs.
+ =ui/doom-modeline= fix hardcoded spacing in between segments.
+ Fix ~def-setting!~ to act more like ~defmacro~, and not aggressively evaluate its arguments on expansion (and update all ~set!~ calls).
+ Rewrite main README.md to include more information about setting up, customizing, and troubleshooting DOOM Emacs.

* Unreleased (master)
+ *New modules:*
  + =tools/password-store= -- Emacs as a password manager, using [[https://www.passwordstore.org/][pass]] as a backend (contributed by [[https://github.com/bandresen][brandresen]]).
  + =app/irc= -- Emacs as an IRC client, using circe (contributed by [[https://github.com/bandresen][brandresen]]).
    + ~+pass/ivy~ for ivy integration, with edit/copy field/open url actions.
    + ~helm-pass~ for helm integration.
+ =core=
  + New variable: ~doom-host-dir~, as a base path for ~doom-etc-dir~ and ~doom-cache-dir~.
  + New hooks: ~doom-init-hook~ and ~doom-post-init-hook~, which are run on ~emacs-startup-hook~. This is meant to simplify post-Emacs initialization hooks (~after-init-hook~, ~emacs-startup-hook~ and ~window-setup-hook~) into two unambiguous ones.
  + Fix =private/<user-login-name>/init.el= not being auto-loaded when the user's private module is absent in the root init.el file.
  + Improve error handling across the board. Emacs should now report more helpful errors. Catastrophic errors will be less likely to inhibit later modules from being loaded.
  + Unit-tests have been moved to their respective modules (and =core/test/=).
  + =core-ui=
    + Add quit confirmation when trying to close a frame that contains real buffers.